# BIMCalcKM

./: .cursorrules  .dockerignore  .env.example  .env.production.example  .gitignore  BACKUP_SETUP_COMPLETE.md  BIMCALC_COMPREHENSIVE_REVIEW.md  CLAUDE.md  CODEBASE_COMPARISON.md  CRITICAL_FIXES_COMPLETE.md  DATA_SOURCES_SETUP.md  DELIVERY_COMPLETE.md  DELIVERY_SUMMARY.md  DEMO_API_SETUP_COMPLETE.md  DEPLOYMENT_SUCCESS.md  DOCKER_POSTGRES_SUMMARY.md  Dockerfile  ENHANCED_WEB_UI_GUIDE.md  FINAL_REVIEW_10_OUT_OF_10.md  INTEGRATION_TESTS_STATUS.md  MONITORING_SETUP_COMPLETE.md  MVP_REVIEW_RESPONSE.md  Makefile  NEW_FEATURES_FROM_PRP_ANALYSIS.md  NEXT_STEPS.md  OPENAI_INTEGRATION_COMPLETE.md  OPERATIONS.md  PATH_C_ENHANCEMENTS_PROGRESS.md  PHASE_1_COMPLETE.md  PHASE_2_PROGRESS.md  POSTGRES_SETUP_GUIDE.md  PRODUCTION_READINESS_VERIFICATION.md  PROGRESS_DASHBOARD_FIXES.md  PROGRESS_TRACKING_GUIDE.md  PROJECT_SIGNOFF.md  README.md  README_BIMCALC_MVP.md  REVIEW_EXECUTIVE_VIEW.md  STAGING_DEPLOYMENT_GUIDE.md  SYSTEM_REVIEW.md  (+46 more)
.agents/: README.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
PRPs/: CRAIL4_DEPLOYMENT_SETUP.md  CRAIL4_DEPLOYMENT_STATUS.md  CRAIL4_IMPLEMENTATION_VERIFICATION.md  CRAIL4_INTEGRATION_INSTRUCTIONS.md  INITIAL.md  PRP-001-BIMCALC-MVP.md  PRP-002-SMART-SCOUT-UI.md  PRP-003-SMART-SCOUT-POLISH.md  PRP-004-REMOVE-CRAIL4.md  TEMPLATE.md
bimcalc/: cli.py  cli_project.py  config.py  models.py  startup_validation.py  worker.py
bimcalc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: alerts_config.sh  backup_config.sh  classification_hierarchy.yaml  classification_map.yaml  curated_classifications.csv  flags.yaml  pipeline_sources.yaml  pipeline_sources_examples.yaml  pipeline_sources_template.yaml  synonyms.yaml  tlc_schema.json
data/: classification_mappings.csv
deployment/: DEPLOYMENT_CHECKLIST.md  DIGITALOCEAN_GUIDE.md  NEXT_STEPS.md  crail4-sync.service  crail4-sync.timer  deploy_key  deploy_key.pub  nginx.conf
docs/: API_INTEGRATION_GUIDE.md  AWS_SES_SETUP.md  BACKUP_PROCEDURES.md  DATA_SOURCES_GUIDE.md  DEVELOPER_GUIDE.md  EMAIL_QUICK_START.md  INTELLIGENCE_ADMIN_GUIDE.md  INTELLIGENCE_API_REFERENCE.md  INTELLIGENCE_QUICKSTART.md  INTELLIGENCE_USER_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  PRICE_SCOUT_COMPLIANCE.md  PRODUCTION_OPERATIONS_GUIDE.md  PROJECT_INTELLIGENCE_ADMIN_GUIDE.md  PROJECT_INTELLIGENCE_USER_GUIDE.md  USER_GUIDE.md  enhanced-confidence-scoring.md
examples/: enhanced_confidence_demo.py  pricebook.csv  quickstart.sh  revit_schedule.csv
planning/: ULTRATHINK-SmartPriceScout-Review-2025-12-04.md  ULTRATHINK-web-refactor-2025-01-01.md  dependencies.md  specs.md  tools.md
reports/: project_a_final.csv  project_a_test.csv
scripts/: README.md  ai_link_documents.py  analyze_excel_headers.py  backup_database.sh  backup_postgres.sh  count_documents.py  count_items.py  create_admin.py  create_dummy_pdf.py  create_dummy_pdf_fpdf.py  create_raw_pdf.py  dashboard.py  debug_settings.py  demo_tritex_features.py  health_check.sh  html_to_pdf.py  ingest_documents.py  ingest_tritex_schedules.py  monitor_and_alert.sh  monitoring_dashboard.sh  reproduce_500.py  reproduce_project_creation_error.py  restore_postgres.sh  (+31 more)
(+373 files in other folders)
