[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bimcalc"
version = "0.1.0"
description = "BIMCalc — classification-first BIM cost matching with mapping memory and risk flags"
authors = [{name="BIMCalc Team"}]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8",
    "pandas>=2.2",
    "typer>=0.12",
    "rapidfuzz>=3.9",
    "rich>=13.7",
    "PyYAML>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.19",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "textual>=0.50",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "Jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bimcalc*"]
exclude = ["tests*", "examples*", "PRPs*", "config*"]

[tool.setuptools.package-data]
"bimcalc.web" = ["templates/*.html"]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.6.9",
    "black>=24.8",
    "types-PyYAML",
]

[project.scripts]
bimcalc = "bimcalc.cli:app"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
extend-select = ["I", "UP", "B", "C4"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
